add api alerts/sls
