# api/v2/models/postable_sls_alerts.go
@@ -1,0 +1,176 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright Prometheus Team
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+//
+// http://www.apache.org/licenses/LICENSE-2.0
+//
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+//
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// PostableSlsAlerts postable sls alerts
+//
+// swagger:model postableSlsAlerts
+type PostableSlsAlerts struct {
+
+	// annotations
+	Annotations LabelSet `json:"annotations,omitempty"`
+
+	// ends at
+	// Format: date-time
+	EndsAt strfmt.DateTime `json:"endsAt,omitempty"`
+
+	// generator URL
+	// Format: uri
+	GeneratorURL strfmt.URI `json:"generatorURL,omitempty"`
+
+	// results
+	Results []LabelSet `json:"results"`
+
+	// starts at
+	// Format: date-time
+	StartsAt strfmt.DateTime `json:"startsAt,omitempty"`
+}
+
+// Validate validates this postable sls alerts
+func (m *PostableSlsAlerts) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateAnnotations(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateEndsAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateGeneratorURL(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateResults(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateStartsAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PostableSlsAlerts) validateAnnotations(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Annotations) { // not required
+		return nil
+	}
+
+	if err := m.Annotations.Validate(formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("annotations")
+		}
+		return err
+	}
+
+	return nil
+}
+
+func (m *PostableSlsAlerts) validateEndsAt(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.EndsAt) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("endsAt", "body", "date-time", m.EndsAt.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *PostableSlsAlerts) validateGeneratorURL(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.GeneratorURL) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("generatorURL", "body", "uri", m.GeneratorURL.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *PostableSlsAlerts) validateResults(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Results) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Results); i++ {
+
+		if err := m.Results[i].Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("results" + "." + strconv.Itoa(i))
+			}
+			return err
+		}
+
+	}
+
+	return nil
+}
+
+func (m *PostableSlsAlerts) validateStartsAt(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.StartsAt) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("startsAt", "body", "date-time", m.StartsAt.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PostableSlsAlerts) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PostableSlsAlerts) UnmarshalBinary(b []byte) error {
+	var res PostableSlsAlerts
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
